# AgentCode

./: .gitignore  README.md  doom.py  jira_bot.py  menu.py  pyproject.toml  requirements.txt  snake.py
