[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "snake-game"
version = "0.1.0"
description = "Terminal based snake game"
authors = [{name = "Unknown", email = "unknown@example.com"}]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "windows-curses; sys_platform == 'win32'"
]

[project.scripts]
snake = "snake:main"
