[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-games"
version = "0.1.0"
description = "Collection of simple terminal games"
authors = [{name = "Unknown", email = "unknown@example.com"}]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "windows-curses; sys_platform == 'win32'",
    "pygame",
]

[project.scripts]
snake = "snake:main"
doom_demo = "doom:main"
